# CLF

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  deny.toml  repack.sh
.github/workflows/: ci.yml  release.yml
clfe/: executor.clfe  pack_clfe.sh
docs/: ARCHITECTURE.md  CONSUMER_NOTE.md  PRODUCER_GUIDE.md  RELEASE.md  SIGNING.md  clfe.md  clfe_abi.md  op_ids.md
examples/: build_and_read.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: clf_open.rs
kernels/simd/: .gitignore  ABI.md  Cargo.toml  pack_clfc.sh
kernels/simd/include/: clf_simd.h
kernels/simd/src/: lib.rs
mnist/: .gitignore  README.md  build.sh
mnist/shaders/: add.comp  batchnorm.comp  conv.comp  globalavgpool.comp  matmul.comp  relu.comp
scripts/: gh-bootstrap-repo.sh  install.ps1  install.sh
src/: format.rs  lib.rs  manifest_file.rs  op_registry.rs  packer.rs  reader.rs  sidecar.rs
tests/: cli_packer.rs  golden_header.rs  integration_tests.rs  packer_tests.rs  reader_tests.rs
tests/fixtures/: README.md  pack.toml
