[package]
name = "clf"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "CLF (Coelanox Library File) — reader and packer for pre-compiled hardware kernel archives"
license = "MIT"
repository = "https://github.com/Coelanox/CLF"
readme = "README.md"

[lib]
name = "clf"
path = "src/lib.rs"

[[bin]]
name = "clf"
path = "src/bin/clf.rs"
required-features = ["serde"]

[[bin]]
name = "coelanox-packer"
path = "src/bin/coelanox-packer.rs"
required-features = ["serde"]

[features]
default = ["serde"]
# Disable if you need a minimal dependency tree without serde derives / JSON helpers.
serde = ["dep:serde"]

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
