[package]
name = "clf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
clf = { path = "..", default-features = false }
libfuzzer-sys = "0.4"
tempfile = "3"

[[bin]]
name = "clf_open"
path = "fuzz_targets/clf_open.rs"
test = false
doc = false
bench = false

[workspace]
